7903633: Make source mode the default, and drop compiled mode
Reviewed-by: mcimadamore