@@ -33,16 +33,9 @@ import static test.jextract.funcpointers.func_h.*;
 import test.jextract.funcpointers.*;
 
 /*
- * @test id=classes
+ * @test
   * @library /lib
  * @run main/othervm JtregJextract -l Func -t test.jextract.funcpointers func.h
- * @build TestFuncPointerInvokers
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestFuncPointerInvokers
- */
-/*
- * @test id=sources
-  * @library /lib
- * @run main/othervm JtregJextractSources -l Func -t test.jextract.funcpointers func.h
  * @build TestFuncPointerInvokers
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestFuncPointerInvokers
  */
